--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7,7 +7,7 @@ body { margin:0; padding:0; }
 #direc{cursor: pointer}
 
 .img-control {
-  	background-image: url('assets/sedona_grey.jpg');
+  	background-image: url('../../assets/sedona_grey.jpg');
     width: 369px;
     height: 60px;
     cursor: pointer;
@@ -21,8 +21,14 @@ body { margin:0; padding:0; }
     border-top: 20px solid #58595B !important;
     line-height: 1em !important;
     width: 370px !important;
+    border-top: 20px solid #7C4A35!important;
 }
-
+.vex-dialog-button-primary{
+  background: #7C4A35!important;
+}
+.vex.vex-theme-os .vex-dialog-button{
+  padding: .75em 1em !important;
+}
 .vex.vex-theme-os {
     padding-top: 80px !important;
 }
@@ -62,4 +68,54 @@ body { margin:0; padding:0; }
 }
 .leaflet-control-locate.requesting a {
   padding: 3px 0 0 4px;
+}
+
+.custom-popup .leaflet-popup-content-wrapper {
+  border-radius: 10px !important;
+  background:#2c3e50;
+  color:#fff;
+  font-size:16px;
+  max-width: 230px;
+  line-height:24px;
+  }
+.custom-popup .leaflet-popup-content-wrapper a {
+    color:rgba(255,255,255,0.5);
+  }
+.custom-popup .leaflet-popup-tip-container {
+  width:30px;
+  height:15px;
+  }
+.custom-popup .leaflet-popup-tip {
+  border-left:15px solid transparent;
+  border-right:15px solid transparent;
+  border-top:15px solid #2c3e50;
+}
+.marker-description a{
+  text-decoration: underline;
+}
+
+#direc a{  
+  color:#3887BE !important;
+  font-weight: bold;
+}
+
+#loader {
+    /*position:absolute; top:0; bottom:0; width:100%;
+    background:rgba(255, 255, 255, 1);
+    transition:background 1s ease-out;
+    -webkit-transition:background 1s ease-out;*/
+}
+#loader.done {
+    background:rgba(255, 255, 255, 0);
+}
+#loader.hide {
+    display:none;
+}
+#loader .message {
+    position:absolute;
+    height: 50px;
+    width: 50px;
+    left:50%;
+    top:50%;
+    background-image: url('../../assets/wheel.gif');
 }
