--- a/app/css/app.css
+++ b/app/css/app.css
@@ -74,6 +74,9 @@ border-top: 20px solid #58595B !important;*/
 .leaflet-control-locate.requesting a {
   padding: 3px 0 0 4px;
 }
+.leaflet-compact-attribution{
+  display: none;
+}
 
 .custom-popup .leaflet-popup-content-wrapper {
   border-radius: 10px !important;
