--- a/app/css/app.css
+++ b/app/css/app.css
@@ -4,7 +4,48 @@
 body { margin:0; padding:0; }
 
 #map { position:absolute; top:0; bottom:0; width:100%; }
+
 #direc{cursor: pointer}
+
+#toolbar{
+  padding-top: 12px;
+  font-size: 18px !important;
+  padding-left: 40%;
+}
+
+.btn{
+    background: #4bc1b9!important;
+    color: white !important;
+}    
+
+.bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn){
+    width: 240px !important;
+}
+/* fallback 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v17/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 1;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: 'liga';
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}*/
 
 .img-control {
     background-image: url('../../assets/sedona_grey.jpg');
@@ -14,6 +55,20 @@ body { margin:0; padding:0; }
     margin-bottom:0px !important;
     margin-right:1px !important;
 }
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    color: #fff;
+    background-color: #4bc1b9 !important;
+}
+.nav-pills{
+  margin-left:40%;
+}
+.art-gallery{
+  background-image: url('../../assets/art_icon.png');
+}
+.nav-pills>li>a{
+  background-color:white !important;
+}
+/*#4bc1b9!important*/
 /*#99520e
 background: #7A1800 !important;
 blue 4bc1b9*/
