--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,7 +10,7 @@ body { margin:0; padding:0; }
 #toolbar{
   padding-top: 12px;
   font-size: 18px !important;
-  padding-left: 40%;
+  padding-left: 43%;
 }
 
 .btn{
@@ -173,6 +173,35 @@ border-top: 20px solid #58595B !important;*/
     background:rgba(255, 255, 255, 1);
     transition:background 1s ease-out;
     -webkit-transition:background 1s ease-out;*/
+}
+.carousel-control {
+  padding-top:10%;
+  width:65%;
+}
+#pubartCarousel{
+  width:65%;
+  position: fixed !important;
+  bottom: 3px !important;
+  left: 19% !important;
+}
+#pubartCarouselmobile{
+  width:56%;
+  position: fixed !important;
+  bottom: 3px !important;
+  left: 0% !important;
+}
+.carousel-caption{
+  padding-bottom:0px !important;
+  bottom: 2px !important;
+}
+.thumbnail{
+  margin-bottom:0px !important;
+  height: 170px !important;
+  background: none !important;
+  background-color: none !important;
+}
+.thumbnail img{
+  height: 170px !important;
 }
 #loader.done {
     background:rgba(255, 255, 255, 0);
