--- a/app/css/app.css
+++ b/app/css/app.css
@@ -10,8 +10,22 @@ body { margin:0; padding:0; }
 
 #map { position:absolute; top:0; bottom:0; width:100%; }
 
-#direc{cursor: pointer}
+#moreinfo{
+  cursor: pointer;
+}
+#direc{
+  cursor: pointer;
+}
 
+#linksite{
+  cursor: pointer;
+}
+#linksite a{
+  color:white !important;
+}
+#moreinfo a{
+  color:white !important;
+}
 #toolbar{
   padding-top: 12px;
   font-size: 18px !important;
