--- a/app/css/app.css
+++ b/app/css/app.css
@@ -192,6 +192,7 @@ border-top: 20px solid #58595B !important;*/
 }
 
 #loader {
+  z-index: 100000;
     /*position:absolute; top:0; bottom:0; width:100%;
     background:rgba(255, 255, 255, 1);
     transition:background 1s ease-out;
@@ -236,6 +237,7 @@ border-top: 20px solid #58595B !important;*/
     height: 50px;
     width: 50px;
     left:50%;
+    z-index: 100000;
     top:50%;
     background-image: url('../../assets/wheel.gif');
 }
