--- a/app/css/app.css
+++ b/app/css/app.css
@@ -27,6 +27,18 @@ body { margin:0; padding:0; }
   width: 60px;
 }
 
+.caret:before{
+  font-family: FontAwesome;
+  content: "\f002";
+  color: #99520e!important;
+}
+.caret{
+  border-top: 0px !important;
+  right: 8px !important;
+  top:25% !important;
+  margin-bottom: 18px;
+  margin-right: 10px;
+}
 .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn){
     width: 240px !important;
 }
