--- a/app/css/app.css
+++ b/app/css/app.css
@@ -174,6 +174,8 @@ border-top: 20px solid #58595B !important;*/
   display: none;
 }
 
+
+
 .custom-popup .leaflet-popup-content-wrapper {
   border-radius: 10px !important;
   background:#2c3e50;
@@ -196,6 +198,7 @@ border-top: 20px solid #58595B !important;*/
 }
 .marker-description a{
   text-decoration: underline;
+  width: 180px !important;
 }
 
 #direc a{  
