--- a/app/css/app.css
+++ b/app/css/app.css
@@ -379,3 +379,57 @@ border-top: 20px solid #58595B !important;*/
 .leaflet-control-geocoder-address-context {
   color: #666;
 }
+
+#side-menu {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
+}
+#side-menu a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+#side-menu a:hover {
+  color: #f1f1f1;
+}
+#side-menu .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+#main {
+  height: 100vh;
+  position: relative;
+  transition: margin-left .5s;
+}
+
+@media screen and (max-height: 450px) {
+  #side-menu {padding-top: 15px;}
+  #side-menu a {font-size: 18px;}
+}
+
+#hamburger {
+  position: absolute;
+  left: 50px;
+  top: 7px;
+  z-index: 1;
+}
+#hamburger div {
+  width: 35px;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+}
