some sidebar styles

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -375,19 +375,40 @@ border-top: 20px solid #58595B !important;*/
 }
 
 #side-menu {
+  background-color: #f3f3f3;
+  color: #666;
+  font-size: 1.8rem;
   height: 100%;
   width: 0;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
   overflow-x: hidden;
-  padding-top: 60px;
   transition: 0.5s;
 }
+#side-menu-header {
+  background-color: #bdbcc1;
+  height: 86px;
+}
+#side-menu #search-bar-div {
+  background-color: #e7e7e7;
+  padding: .75rem;
+}
+#search-select-bar {
+  width: 100%;
+}
+#search-select-list {
+  padding: 0;
+  list-style: none;
+}
+#search-select-list li {
+  cursor: pointer;
+  padding: .5rem .75rem;
+  white-space: nowrap;
+}
 #side-menu.is-active {
-  width: 250px;
+  width: 340px;
 }
 #side-menu a {
   padding: 8px 8px 8px 32px;
@@ -413,11 +434,10 @@ border-top: 20px solid #58595B !important;*/
   transition: margin-left .5s;
 }
 #main.is-active {
-  margin-left: 250px;
+  margin-left: 340px;
 }
 
 @media screen and (max-height: 450px) {
-  #side-menu {padding-top: 15px;}
   #side-menu a {font-size: 18px;}
 }
 
@@ -429,7 +449,7 @@ border-top: 20px solid #58595B !important;*/
   position: absolute;
   left: 50px;
   top: 10px;
-  transition: left .5s;
+  transition: .5s;
   z-index: 1;
 }
 #hamburger:focus, #hamburger:active {
@@ -437,7 +457,8 @@ border-top: 20px solid #58595B !important;*/
   box-shadow: none;
 }
 #hamburger.is-active {
-  left: 170px;
+  background: none;
+  left: 260px;
 }
 
 /*!
@@ -498,8 +519,8 @@ border-top: 20px solid #58595B !important;*/
     bottom: -10px; }
 
   /*
-      * Squeeze
-      */
+  * Squeeze
+  */
   .hamburger--squeeze .hamburger-inner {
     transition-duration: 0.075s;
     transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); }
@@ -522,5 +543,5 @@ border-top: 20px solid #58595B !important;*/
       transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
 #search-select-list li[data-selected="true"] {
-  background-color: red;
+  background-color: #4bc1b9;
 }
