add slider switches

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -393,6 +393,7 @@ border-top: 20px solid #58595B !important;*/
 }
 #side-menu-header-spacer {
   background-color: rgba(153, 81, 14, 0.9);
+  background-color: #aaa;
   height: 4.5em;
 }
 #side-menu-header-title {
@@ -421,11 +422,18 @@ border-top: 20px solid #58595B !important;*/
   cursor: pointer;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: .3rem .75rem;
   white-space: nowrap;
 }
-#search-select-list li[data-selected="true"] {
-  background-color: rgba(75, 193, 185, 0.6);
+/* #search-select-list li[data-selected="true"], */
+#search-select-list li:hover {
+  background-color: #dfdfdf;
+  /* background-color: rgba(75, 193, 185, 0.6); */
+}
+#search-select-list li .switch-label {
+  display: flex;
+  align-items: center;
 }
 #side-menu.is-active {
   width: 340px;
@@ -562,3 +570,84 @@ border-top: 20px solid #58595B !important;*/
       bottom: 0;
       transform: rotate(-90deg);
       transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
+
+/* bootstrap switch polyfill */
+/* The switch - the box around the slider */
+.switch {
+  margin: 0;
+  position: relative;
+  display: inline-block;
+  width: 52px;
+  height: 26px;
+  float: right;
+}
+
+/* Hide default HTML checkbox */
+.switch input { display:none; }
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+/* input.default:checked + .slider {
+  background-color: #444;
+}
+input.primary:checked + .slider {
+  background-color: #2196F3;
+}
+input.success:checked + .slider {
+  background-color: #8bc34a;
+}
+input.info:checked + .slider {
+  background-color: #3de0f5;
+}
+input.warning:checked + .slider {
+  background-color: #FFC107;
+}
+input.danger:checked + .slider {
+  background-color: #f44336;
+} */
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+#search-select-list li[data-selected="true"] input + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+#search-select-list li[data-selected="true"] input + .slider {
+  background-color: #888;
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 26px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
