--- a/app/css/app.css
+++ b/app/css/app.css
@@ -43,7 +43,12 @@ body { margin:0; padding:0; }
     color: #4bc1b9!important;
 }
 
-    
+.glyphicon-plus {
+  color: #4bc1b9!important;
+}
+.glyphicon-minus {
+  color: #4bc1b9!important;
+} 
 .leaflet-left .leaflet-control{
   margin-bottom: 1px !important;
     color: #4bc1b9!important;
@@ -544,6 +549,7 @@ border-top: 20px solid #58595B !important;*/
   width: 52px;
   height: 26px;
   float: right;
+  right: 8px;
 }
 
 /* Hide default HTML checkbox */
@@ -605,7 +611,7 @@ input.danger:checked + .slider {
     width: 100%;
 }
 #search-select-list {
-  height: calc(100vh - 7.25em);
+  height: calc(100vh - 5.9em);
   margin-top: 5em;
   overflow: auto;
 }
