--- a/app/css/app.css
+++ b/app/css/app.css
@@ -174,7 +174,7 @@ border-top: 20px solid #58595B !important;*/
 
 .custom-popup .leaflet-popup-content-wrapper {
   border-radius: 10px !important;
-  background:#2c3e50;
+  background:#4bc1b9;
   color:#fff;
   font-size:16px;
   max-width: 230px;
